syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (TokenRequest) returns (ValidateResponse);
  rpc RefreshToken (TokenRequest) returns (AuthResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenRequest {
  string token = 1;
}

message AuthResponse {
  string token = 1;
  string refreshToken = 2;
  User user = 3;
}

message ValidateResponse {
  bool valid = 1;
  User user = 2;
}

message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string createdAt = 6;
  string updatedAt = 7;
} 